# rt-vectorworks-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: install-workflow.md  test-handoff-workflow.md  vectorworks-glossary.md
scripts/: install.py  vw_ping.py
spike/: README.md  poke.py  vw_modal_listener.py
spike/persistent_probe/: install.sh  vw_mcp_spike_loader.py
tests/: test_dispatch.py  test_e2e_example.py  test_framing.py  test_install_loader.py  test_server.py  test_transport.py
vw_mcp/: __init__.py  dispatch.py  framing.py  listener.py  server.py  vs_adapter.py
